fix for single product image size on Firefox

--- a/less/plugin-ecommerce.less
+++ b/less/plugin-ecommerce.less
@@ -20,6 +20,7 @@
 
 .product-item-image .image,
 .product-image .image {
+    width: 100%;
     padding: 10px;
 }
 
